--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Morgan J Lopes : CTO at Fast Company's World Most Innovative Company (x4) and Author of "Code School", a book to help more people transition into tech.</title>
+  <title>David Cabuay : CTO at Fast Company's World Most Innovative Company (x4) and Author of "Code School", a book to help more people transition into tech.</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><i class="bi-lightning-charge"></i> Morgan J Lopes</a>
+      <a class="navbar-brand" href="#"><i class="bi-lightning-charge"></i> David Cabuay</a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
           </li>
         </ul>
 
-        <a target='_blank' href='https://www.linkedin.com/in/morganjlopes/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
+        <a target='_blank' href='https://www.linkedin.com/in/davidcabuay/' class='btn btn-primary'><i class="bi-linkedin"></i> Connect on Linkedin</a>
         <!-- <a  target='_blank' href='https://calendly.com/morganjlopes/call' class='btn btn-primary'><i class="bi-calendar-event"></i> Schedule a Call</a> -->
         <!-- <a href='#' class='btn btn-primary'><i class="bi-download"></i> Download Resume</a> -->
         <!-- <a href='mailto:' class='btn btn-primary'><i class="bi-envelope"></i> Send Email</a> -->
@@ -47,7 +47,7 @@
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-md-6 offset-md-3'>
-          <sup>Meet Morgan J Lopes</sup>
+          <sup>Meet David Cabuay</sup>
           <h1>Combining <span class='marker-highlight'>technology</span> and creative <span class='marker-highlight'>problem-solving</span> to positively impact others.</h1>
           <p class='lead mb-5'>I use technology to connect people and help others reach their full potential.</p>
 
@@ -438,7 +438,7 @@
       <div class='row'>
         <div class='col-sm-6'>
           <p>
-            Built on <a href='https://getbootstrap.com/' target='_blank' class='text-white'>Bootstrap</a> and Developed by <a href='https://www.morganjlopes.com/' target='_blank' class='text-white'>Morgan J Lopes</a>
+            Built on <a href='https://getbootstrap.com/' target='_blank' class='text-white'>Bootstrap</a> and Developed by <a href='https://www.morganjlopes.com/' target='_blank' class='text-white'>David Cabuay</a>
           </p>
         </div>
 
